added some rudimentary CSS to log page and got log viewing working

--- a/BlobDeliveryLib/Resources/LogTemplate.html
+++ b/BlobDeliveryLib/Resources/LogTemplate.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title>{ProductName} Change Log</title>
+    <style type="text/css">
+        body {
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            font-size:11pt
+        }
+    </style>
 </head>
 <body>
     <h1>{ProductName} Change Log</h1>
